--- a/ionic/myApp/www/templates/login.html
+++ b/ionic/myApp/www/templates/login.html
@@ -10,7 +10,7 @@
       <div class="list">
         <label class="item item-input">
           <span class="input-label">Phone Number</span>
-          <input type="text" ng-model="loginData.phonenumber">
+          <input type="tel" ng-model="loginData.phonenumber">
         </label>
         <label class="item item-input">
           <span class="input-label">Password</span>
