--- a/ionic/myApp/www/templates/menu.html
+++ b/ionic/myApp/www/templates/menu.html
@@ -18,9 +18,6 @@
     </ion-header-bar>
     <ion-content>
       <ion-list>
-        <ion-item nav-clear menu-close ng-click="login()">
-          Login
-        </ion-item>
         <ion-item nav-clear menu-close href="#/app/mygroups">
           My Groups
         </ion-item>
@@ -28,7 +25,10 @@
           Groups Around Me
         </ion-item>
         <ion-item nav-clear menu-close href="#/app/mygroups">
-          Settings
+          Find Groups
+        </ion-item>
+        <ion-item menu-close href="#/app/mygroups">
+          <button class="button icon ion-gear-a"> Settings</button>
         </ion-item>
       </ion-list>
     </ion-content>
