feat ionic - add find and create group menu items, icons on menu page

--- a/ionic/myApp/www/templates/menu.html
+++ b/ionic/myApp/www/templates/menu.html
@@ -19,15 +19,19 @@
     <ion-content>
       <ion-list>
         <ion-item nav-clear menu-close href="#/app/mygroups">
-          My Groups
+          <i class="icon ion-person-stalker"></i> My Groups
+        </ion-item>
+        <ion-item nav-clear menu-close href="#/app/creategroup">
+          <i class="icon ion-plus"></i> Create Group
+          
         </ion-item>
         <ion-item nav-clear menu-close href="#/app/mygroups">
-          Groups Around Me
+          <i class="icon ion-navigate"></i> Groups Around Me
+        </ion-item>
+        <ion-item nav-clear menu-close href="#/app/findgroup">
+          <i class="icon ion-search"></i> Find Groups
         </ion-item>
         <ion-item nav-clear menu-close href="#/app/mygroups">
-          Find Groups
-        </ion-item>
-        <ion-item menu-close href="#/app/mygroups">
           <button class="button icon ion-gear-a"> Settings</button>
         </ion-item>
       </ion-list>
