--- a/ionic/myApp/www/templates/mygroups.html
+++ b/ionic/myApp/www/templates/mygroups.html
@@ -1,5 +1,41 @@
-<ion-view view-title="Browse">
+<ion-view view-title="My Groups">
   <ion-content>
-    <h1>My Groups</h1>
+
+    <div class="list card">
+    
+    <a href="#" class="item item-icon-left">
+      <i class="icon ion-home"></i>
+      Group 1
+    </a>
+
+    <a href="#" class="item item-icon-left">
+      <i class="icon ion-home"></i>
+      Group 2
+    </a>
+
+    <a href="#" class="item item-icon-left">
+      <i class="icon ion-home"></i>
+      Group 3
+    </a>
+
+    <a href="#" class="item item-icon-left">
+      <i class="icon ion-home"></i>
+      Group 4
+    </a>
+
+    </div>
   </ion-content>
 </ion-view>
+<!-- <div ng-repeat="groups in data.groups">  -->
+    <!-- passes the group data to getUsers -->
+    <!-- <h2><a ng-click="getUsers(groups)">{{ groups.name }}</a></h2>
+    
+    <ul> 
+      <li ng-repeat='users in data.users'> {{users.username}} </li>
+    </ul> 
+
+    <p><a class="btn btn-default" ng-click='joinGroup(groups)' href="#" role="button">Join Group &raquo;</a></p>
+    <p ><a class="btn btn-default" ng-click='pingGroup(groups)' href="#" role="button">Ping Group &raquo;</a></p>
+
+  </div>
+</div> -->
