feat debugging ionic

--- a/ionic/myApp/www/templates/signup.html
+++ b/ionic/myApp/www/templates/signup.html
@@ -10,11 +10,11 @@
       <div class="list">
         <label class="item item-input">
           <span class="input-label">Phone Number</span>
-          <input type="tel" ng-model="signUpData.phonenumber" placeholder="ex. 9175202524" maxlength="10">
+          <input type="tel" ng-model="signUpData.number" placeholder="ex. 9175202524" maxlength="10">
         </label>
         <label class="item item-input">
           <span class="input-label">Name</span>
-          <input type="text" ng-model="signUpData.name" placeholder="how friends will see your messages" maxlength="20">
+          <input type="text" ng-model="signUpData.username" placeholder="how friends will see your messages" maxlength="20">
         </label>
         <label class="item item-input">
           <span class="input-label">E-mail</span>
