bugs signup partially fixed

--- a/ionic/myApp/www/templates/signup.html
+++ b/ionic/myApp/www/templates/signup.html
@@ -10,19 +10,19 @@
       <div class="list">
         <label class="item item-input">
           <span class="input-label">Phone Number</span>
-          <input type="tel" ng-model="signUpData.number" placeholder="ex. 9175202524" maxlength="10">
+          <input type="tel" ng-model="signupData.phone" placeholder="ex. 9175202524" maxlength="10">
         </label>
         <label class="item item-input">
           <span class="input-label">Name</span>
-          <input type="text" ng-model="signUpData.username" placeholder="how friends will see your messages" maxlength="20">
+          <input type="text" ng-model="signupData.username" placeholder="how friends will see your messages" maxlength="20">
         </label>
         <label class="item item-input">
           <span class="input-label">E-mail</span>
-          <input type="email" ng-model="signUpData.email" placeholder="for optional notificaitons" maxlength="50">
+          <input type="email" ng-model="signupData.email" placeholder="for optional notificaitons" maxlength="50">
         </label>
         <label class="item item-input">
           <span class="input-label">Password</span>
-          <input type="password" ng-model="signUpData.password" placeholder="between 6 and 10 characters" minlength="6" maxlength="10">
+          <input type="password" ng-model="signupData.password" placeholder="between 6 and 10 characters" minlength="6" maxlength="10">
         </label>
         <label class="item">
           <button class="button button-block button-positive" type="submit">Sign Up!</button>
