feat get mygroupdetails page up and running

--- a/ionic/myApp/www/templates/menu.html
+++ b/ionic/myApp/www/templates/menu.html
@@ -18,7 +18,7 @@
     </ion-header-bar>
     <ion-content>
       <ion-list>
-        <ion-item nav-clear menu-close href="#/app/mygroups">
+        <ion-item nav-clear menu-close ng-click=gomygroups()>
           <i class="icon ion-person-stalker"></i> My Groups
         </ion-item>
         <ion-item nav-clear menu-close href="#/app/creategroup">
@@ -27,8 +27,8 @@
         <ion-item nav-clear menu-close href="#/app/mygroups">
           <i class="icon ion-navigate"></i> Groups Around Me
         </ion-item>
-        <ion-item nav-clear menu-close href="#/app/findgroup">
-          <i class="icon ion-search"></i> Find Groups
+        <ion-item nav-clear menu-close href="#/app/allgroups">
+          <i class="icon ion-search"></i> All Groups
         </ion-item>
         <ion-item nav-clear menu-close href="#/app/mygroups">
           <button class="button icon ion-gear-a"> Settings</button>
