modify creategroup page, edit signup page, altered send message data object

--- a/ionic/myApp/www/templates/creategroup.html
+++ b/ionic/myApp/www/templates/creategroup.html
@@ -1,21 +1,25 @@
 <ion-view view-title="Create a Group!">
   <ion-content>
   <main class="bs-docs-masthead" id="content" role="main">
-    <form ng-submit="createGroup()">
       <div class="container">
         <div class="list list-inset">
-          <label class="item item-input">
-            <input type="text" ng-model="data.newGroup" placeholder="Group Name" >
+          <!-- <label class="item item-input"> -->
+            <label class="item item-input">
+              <input type="text" ng-model="data.newGroup" placeholder="Group Name" autofocus>
+            </label>
+
+            <button ng-click="getLocation()" class="button button-full button-positive"> Get Location </button>
+            <label class="item item-input">
+              <input type="text" ng-model="data.latitude" placeholder="Latitude">
+            </label>
+            <label class="item item-input">
+              <input type="text" ng-model="data.longitude" placeholder="Longitude">
+            </label>
             <!-- <input type="text" ng-model="data.physicalAddress" placeholder="Address" > -->
-            <input type="text" ng-model="data.latitude" placeholder="Latitude">
-            <input type="text" ng-model="data.longitude" placeholder="Longitude">
-            <!-- <a href="#" ng-click="getLocation()"> Get My Location </a> -->
-          </label>
-          <input type="submit" id="submit" value="Submit" />
+          <button ng-click="createGroup()" class="button button-full button-positive"> Create Group </button>
         </div>
       </div>
-    </form>
-    <button ng-click="getLocation()" class="button button-full button-positive"> Use Current Location </button>
+
   </main>
   </ion-content>
 </ion-view>
