--- a/ionic/myApp/www/templates/sendMessage.html
+++ b/ionic/myApp/www/templates/sendMessage.html
@@ -9,7 +9,7 @@
     <form ng-submit="sendMessage()">
       <div class="list list-inset">
         <label class="item item-input">
-          <input type="text" ng-model="messageData" class='messageHeight'>
+          <input type="text" ng-model="messageData" autofocus>
         </label>
         <!-- <label class="item"> -->
           <button class="button button-block button-positive" type="submit">Send!</button>
