--- a/ionic/myApp/www/templates/signup.html
+++ b/ionic/myApp/www/templates/signup.html
@@ -7,7 +7,7 @@
   </ion-header-bar>
   <ion-content>
     <form ng-submit="doSignUp()">
-      <div class="list">
+      <div class="list list-inset">
         <label class="item item-input">
           <span class="input-label">Phone Number</span>
           <input type="tel" ng-model="signupData.phone" placeholder="ex. 9175202524" maxlength="10">
