--- a/ionic/myApp/www/templates/creategroup.html
+++ b/ionic/myApp/www/templates/creategroup.html
@@ -7,8 +7,8 @@
             <label class="item item-input">
               <input type="text" ng-model="data.newGroup" placeholder="Group Name" autofocus>
             </label>
-
-            <button ng-click="getLocation()" class="button button-full button-positive"> Get Location </button>
+            <button ng-click="getLocation()" class="button button-full button-positive"> 
+            <i class='ion-navigate'></i> Get Location </button>
             <label class="item item-input">
               <input type="text" ng-model="data.latitude" placeholder="Latitude">
             </label>
@@ -19,7 +19,6 @@
           <button ng-click="createGroup()" class="button button-full button-positive"> Create Group </button>
         </div>
       </div>
-
   </main>
   </ion-content>
 </ion-view>
