--- a/ionic/myApp/www/templates/parent.html
+++ b/ionic/myApp/www/templates/parent.html
@@ -1,21 +1,15 @@
 <ion-view view-title="Boundless Marble!">
   <ion-content>
-  <main class="bs-docs-masthead" id="content" role="main">
-    <div class="container">
-      
-    <h1>Welcome!</h1>
-      <p class="lead">Marble Friends is the simplest, most responsive service to create organizations and events on the web.</p>
-     
-      <button type="submit" ng-click="signUp()" class="button button-full button-positive">Sign up</button>
-      <button type="submit" ng-click="login()" class="button button-full button-balanced">Sign in</button>
-      
-  </main>
-
-  <hr>
-
-    
+  <div class='item item-inset'>
+    <main class="bs-docs-masthead" id="content" role="main">
+      <div class="container">
+        
+      <h1>Guacamole!</h1>
+        <p class="lead">A simple, responsive way to create meetups on the fly.</p>
+       
+        <button type="submit" ng-click="signUp()" class="button button-full button-positive">Sign up</button>
+        <button type="submit" ng-click="login()" class="button button-full button-balanced">Sign in</button>        
+    </main>
+  </div>
   </ion-content>
 </ion-view>
-
-
-
