--- a/ionic/myApp/www/templates/mygroupdetails.html
+++ b/ionic/myApp/www/templates/mygroupdetails.html
@@ -1,14 +1,29 @@
 <ion-view view-title="{{ groupName }}">
   <ion-content>
-    <div class='list list-inset'>
+  <div class='list list-inset'>
     <button class="button button-block button-balanced" ng-click='openMessage()'>Message Group</button>
-       <div class="item item-divider">
-          Users
-        </div>
-       <div class="item item-icon-left" href="#" ng-repeat="user in users">
-          <i class="icon ion-person-stalker"></i> {{ user.username }}
-      </div>
-      <button class="button button-block button-assertive" ng-click='leaveGroup(groupName)'>Leave Group</button>
+    <div class="item item-divider">
+      Settings
     </div>
+    <ul class="list">
+
+    <ion-toggle ng-model="item.checked" ng-checked=true>
+      Notifications 
+    </ion-toggle>
+    <ion-toggle ng-model="item.checked" ng-checked=false>
+      Mute Group
+    </ion-toggle>
+    <div>
+    <li>
+      <div class="item item-divider">
+        Users ({{ users.count }})
+      </div>
+      <div class="item item-icon-left" href="#" ng-repeat="user in users">
+        <i class="icon ion-person-stalker"></i> {{ user.username }}
+      </div>
+    </li>
+    </div>
+    <button class="button button-block button-assertive" ng-click='leaveGroup(groupName)'>Leave Group</button>
+  </div>
   </ion-content>
 </ion-view>
