--- a/ionic/myApp/www/templates/sendMessage.html
+++ b/ionic/myApp/www/templates/sendMessage.html
@@ -1,4 +1,4 @@
-<ion-modal-view>
+<ion-modal-view style="height:20%; width: 100%">
   <ion-header-bar>
     <h1 class="title">Send a Message to {{ groupName }}</h1>
     <div class="buttons">
@@ -6,7 +6,7 @@
     </div>
   </ion-header-bar>
   <ion-content>
-    <form ng-submit="sendMessage()">
+    <form ng-submit="sendMessage(messageData)">
       <div class="list list-inset">
         <label class="item item-input">
           <input type="text" ng-model="messageData" autofocus>
