--- a/ionic/myApp/www/templates/menu.html
+++ b/ionic/myApp/www/templates/menu.html
@@ -30,7 +30,7 @@
           <i class="icon ion-search"></i> All Groups
         </ion-item>
         <ion-item nav-clear menu-close href="#/app/mygroups">
-          <button class="button icon ion-gear-a"> Settings</button>
+          <i class="icon ion-gear-a"></i> Settings
         </ion-item>
     </ion-content>
   </ion-side-menu>
